--- a/DAW/Cliente/ProgramacionBasica/index.html
+++ b/DAW/Cliente/ProgramacionBasica/index.html
@@ -39,9 +39,9 @@
             <li><a href="ej14/ejercicio.html">Ejercicio 14</a></li>
             <li><a href="ej15/ejercicio.html">Ejercicio 15</a></li>
             <li><a href="ej16/ejercicio.html">Ejercicio 16</a></li>
-            <li>Ejercicio 17</li>
-            <li>Ejercicio 18</li>
-            <li>Ejercicio 19</li>
+            <li><a href="ej17/ejercicio.html">Ejercicio 17</a></li>
+            <li><a href="ej18/ejercicio.html">Ejercicio 18</a></li>
+            <li><a href="ej19/ejercicio.html">Ejercicio 19</a></li>
         </ul>
     </section>
     <section id="botones">
