--- a/DAW/Cliente/index.html
+++ b/DAW/Cliente/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <p>José Mª Romero Ruiz</p>
+        <p><a href="../../index.html">José Mª Romero Ruiz</a></p>
     </header>
     <section>
         <p><a id="intermedia" href="ProgramacionBasica/index.html">Programación básica</a></p>
