--- a/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+        Autor: José María Romero Ruiz
+    -->
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link rel="stylesheet" type="text/css" href="../../../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
-    <title>Index</title>
+    <title>Indice</title>
 </head>
 
 <body>
     <header>
-        <p><a href="../../index.html">José Mª Romero Ruiz</a></p>
+        <p><a href="../../../../index.html">José Mª Romero Ruiz</a></p>
     </header>
-    <section>
-        <p><a id="intermedia" href="ProgramacionBasica/index.html">Programación básica</a></p>
-        <p><a id="intermedia" href="ObjetosPredefinidos/index.html">Objetos predefinidos</a></p>
+    <section id="seccionLista" >
+        <h3>Índice Windows y Screen</h3>
+        <ul>
+            <li><a href="ej1/ejercicio.html">Ejercicio 1</a></li>
+            <li><a href="ej2/ejercicio.html">Ejercicio 2</a></li>
+            <li><a href="ej3/ejercicio.html">Ejercicio 3</a></li>
+            <li><a href="ej4/ejercicio.html">Ejercicio 4</a></li>
+            <li><a href="ej5/ejercicio.html">Ejercicio 5</a></li>
+        </ul>
     </section>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
     <footer class="footer">
         <div class="container text-center">
@@ -32,4 +42,5 @@
         </div>
     </footer>
 </body>
+
 </html>
