--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej6/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej6/ejercicio.html
@@ -16,14 +16,12 @@
         <h1>Se requiere javascript</h1>
     </noscript>
 
-    <h2>Ejercicio 4 - José Mª Romero Ruiz</h2>
-    <b>Crea una función que cree un array de la dimensión indicada,
-        cuyo contenido sean los números naturales comenzando desde 0
+    <h2>Ejercicio 6 - José Mª Romero Ruiz</h2>
+    <b>Crea  una función que devuelva un array con cada uno de los argumentos.
+    En caso de que alguno de sus argumentos sea un array, que introduzca sus elementos uno a uno.
     </b>
 
-    <p>Introduzca la dimensión del array <input type="number" id="dimensionArray"></p>
-    <button type="button" id="aceptar">Aceptar</button>
-    <p id="info"></p>
+    <p id = "info"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
         <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
