--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/index.html
@@ -20,18 +20,19 @@
     <header>
         <p><a href="../../../../index.html">José Mª Romero Ruiz</a></p>
     </header>
-    <section id="seccionLista" >
+    <section id="seccionLista">
         <h3>Índice Arrays</h3>
+        <hr />
         <ul>
-            <li><a href="ej1/ejercicio.html">Ejercicio 1</a></li>
-            <li><a href="ej2/ejercicio.html">Ejercicio 2</a></li>
-            <li><a href="ej3/ejercicio.html">Ejercicio 3</a></li>
-            <li><a href="ej4/ejercicio.html">Ejercicio 4</a></li>
-            <li><a href="ej5/ejercicio.html">Ejercicio 5</a></li>
-            <li><a href="ej6/ejercicio.html">Ejercicio 6</a></li>
-            <li><a href="ej7/ejercicio.html">Ejercicio 7</a></li>
-            <li><a href="ej8/ejercicio.html">Ejercicio 8</a></li>
-            <li><a href="ej9/ejercicio.html">Ejercicio 9</a></li>
+            <a href="ej1/ejercicio.html"><li>Ejercicio 1</li></a>
+            <a href="ej2/ejercicio.html"><li>Ejercicio 2</li></a>
+            <a href="ej3/ejercicio.html"><li>Ejercicio 3</li></a>
+            <a href="ej4/ejercicio.html"><li>Ejercicio 4</li></a>
+            <a href="ej5/ejercicio.html"><li>Ejercicio 5</li></a>
+            <a href="ej6/ejercicio.html"><li>Ejercicio 6</li></a>
+            <a href="ej7/ejercicio.html"><li>Ejercicio 7</li></a>
+            <a href="ej8/ejercicio.html"><li>Ejercicio 8</li></a>
+            <a href="ej9/ejercicio.html"><li>Ejercicio 9</li></a>
         </ul>
     </section>
     <section id="botones">
