--- a/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/index.html
@@ -22,12 +22,13 @@
     </header>
     <section id="seccionLista" >
         <h3>Índice Windows y Screen</h3>
+        <hr />
         <ul>
-            <li><a href="ej1/ejercicio.html">Ejercicio 1</a></li>
-            <li><a href="ej2/ejercicio.html">Ejercicio 2</a></li>
-            <li><a href="ej3/ejercicio.html">Ejercicio 3</a></li>
-            <li><a href="ej4/ejercicio.html">Ejercicio 4</a></li>
-            <li><a href="ej5/ejercicio.html">Ejercicio 5</a></li>
+            <a href="ej1/ejercicio.html"><li>Ejercicio 1</li></a>
+            <a href="ej2/ejercicio.html"><li>Ejercicio 2</li></a>
+            <a href="ej3/ejercicio.html"><li>Ejercicio 3</li></a>
+            <a href="ej4/ejercicio.html"><li>Ejercicio 4</li></a>
+            <a href="ej5/ejercicio.html"><li>Ejercicio 5</li></a>
         </ul>
     </section>
     <section id="botones">
