--- a/DAW/Cliente/ObjetosPredefinidos/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/index.html
@@ -22,16 +22,17 @@
     </header>
     <section id="seccionLista" >
         <h3>Objetos predefinidos en Javascript</h3>
+        <hr />
         <ul>
-            <li><a href="AparienciaVentana/ejercicio.html">Apariencia de las ventanas</a></li>
-            <li><a href="MultiplesVentanas/ejercicio.html">Múltiples ventanas</a></li>
-            <li><a href="ListadoWindowsScreen/index.html">Listado windows y screen en Javascript</a></li>
-            <li><a href="ListadoArrays/index.html">Listado arrays en Javascript</a></li>
-            <li><a href="">Listado date</a></li>
-            <li><a href="">Listado regex</a></li>
-            <li><a href="">Expresiones regulares: comprobando DNI</a></li>
-            <li><a href="">Calculadora</a></li>
-            <li><a href="">Listado Collections</a></li>
+            <a href="AparienciaVentana/ejercicio.html"><li>Apariencia de las ventanas</li></a>
+            <a href="MultiplesVentanas/ejercicio.html"><li>Múltiples ventanas</li></a>
+            <a href="ListadoWindowsScreen/index.html"><li>Listado windows y screen en Javascript</li></a>
+            <a href="ListadoArrays/index.html"><li>Listado arrays en Javascript</li></a>
+            <a href="ListadoDate/index.html"><li>Listado date</li></a>
+            <a href=""><li>Listado regex</li></a>
+            <a href=""><li>Expresiones regulares: comprobando DNI</li></a>
+            <a href=""><li>Calculadora</li></a>
+            <a href=""><li>Listado Collections</li></a>
         </ul>
     </section>
     <section id="botones">
