--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej9/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej9/ejercicio.html
@@ -16,13 +16,20 @@
         <h1>Se requiere javascript</h1>
     </noscript>
 
-    <h2>Ejercicio 4 - José Mª Romero Ruiz</h2>
-    <b>Crea una función que cree un array de la dimensión indicada,
-        cuyo contenido sean los números naturales comenzando desde 0
+    <h2>Ejercicio 9 - José Mª Romero Ruiz</h2>
+    <b>
+        <ol>
+            Averigua qué método es el más eficiente para manejarse con arrays. Compruébalo mediante performance.now() o
+            similares
+
+            <li> Introduce 100 elementos en un array mediante push(), unshift(), directamente, fijando tamaño en new
+                Array...
+            </li>
+            <li> Eliminar 100 elementos en un array mediante pop(), shift(), directamente, fijando tamaño...
+            </li>
+        </ol>
     </b>
 
-    <p>Introduzca la dimensión del array <input type="number" id="dimensionArray"></p>
-    <button type="button" id="aceptar">Aceptar</button>
     <p id="info"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
