--- a/DAW/Cliente/ObjetosPredefinidos/ListadoDate/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoDate/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../../../style.css">
+    <link rel="stylesheet" type="text/css" href="../../../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
@@ -18,10 +18,10 @@
 
 <body>
     <header>
-        <p><a href="../../../index.html">José Mª Romero Ruiz</a></p>
+        <p><a href="../../../../index.html">José Mª Romero Ruiz</a></p>
     </header>
-    <section id="seccionLista" >
-        <h3>Índice de ejercicios básicos</h3>
+    <section id="seccionLista">
+        <h3>Índice Listado Date</h3>
         <hr />
         <ul>
             <a href="ej1/ejercicio.html"><li>Ejercicio 1</li></a>
@@ -34,20 +34,11 @@
             <a href="ej8/ejercicio.html"><li>Ejercicio 8</li></a>
             <a href="ej9/ejercicio.html"><li>Ejercicio 9</li></a>
             <a href="ej10/ejercicio.html"><li>Ejercicio 10</li></a>
-            <a href="ej11/ejercicio.html"><li>Ejercicio 11</li></a>
-            <a href="ej12/ejercicio.html"><li>Ejercicio 12</li></a>
-            <a href="ej13/ejercicio.html"><li>Ejercicio 13</li></a>
-            <a href="ej14/ejercicio.html"><li>Ejercicio 14</li></a>
-            <a href="ej15/ejercicio.html"><li>Ejercicio 15</li></a>
-            <a href="ej16/ejercicio.html"><li>Ejercicio 16</li></a>
-            <a href="ej17/ejercicio.html"><li>Ejercicio 17</li></a>
-            <a href="ej18/ejercicio.html"><li>Ejercicio 18</li></a>
-            <a href="ej19/ejercicio.html"><li>Ejercicio 19</li></a>
         </ul>
     </section>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
     <footer class="footer">
         <div class="container text-center">
