--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../../../style.css">
+    <link rel="stylesheet" type="text/css" href="../../../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
@@ -18,26 +18,27 @@
 
 <body>
     <header>
-        <p><a href="../../../index.html">José Mª Romero Ruiz</a></p>
+        <p><a href="../../../../index.html">José Mª Romero Ruiz</a></p>
     </header>
-    <section id="seccionLista" >
-        <h3>Objetos predefinidos en Javascript</h3>
+    <section id="seccionLista">
+        <h3>Índice Listado Regex</h3>
         <hr />
         <ul>
-            <a href="AparienciaVentana/ejercicio.html"><li>Apariencia de las ventanas</li></a>
-            <a href="MultiplesVentanas/ejercicio.html"><li>Múltiples ventanas</li></a>
-            <a href="ListadoWindowsScreen/index.html"><li>Listado windows y screen en Javascript</li></a>
-            <a href="ListadoArrays/index.html"><li>Listado arrays en Javascript</li></a>
-            <a href="ListadoDate/index.html"><li>Listado date</li></a>
-            <a href="ListadoRegex/index.html"><li>Listado regex</li></a>
-            <a href=""><li>Expresiones regulares: comprobando DNI</li></a>
-            <a href=""><li>Calculadora</li></a>
-            <a href=""><li>Listado Collections</li></a>
+            <a href="ej1/ejercicio.html"><li>Ejercicio 1</li></a>
+            <a href="ej2/ejercicio.html"><li>Ejercicio 2</li></a>
+            <a href="ej3/ejercicio.html"><li>Ejercicio 3</li></a>
+            <a href="ej4/ejercicio.html"><li>Ejercicio 4</li></a>
+            <a href="ej5/ejercicio.html"><li>Ejercicio 5</li></a>
+            <a href="ej6/ejercicio.html"><li>Ejercicio 6</li></a>
+            <a href="ej7/ejercicio.html"><li>Ejercicio 7</li></a>
+            <a href="ej8/ejercicio.html"><li>Ejercicio 8</li></a>
+            <a href="ej9/ejercicio.html"><li>Ejercicio 9</li></a>
+            <a href="ej10/ejercicio.html"><li>Ejercicio 10</li></a>
         </ul>
     </section>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
     <footer class="footer">
         <div class="container text-center">
