Regex DNI Corrección boton inicio en listados

--- a/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej9/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej9/ejercicio.html
@@ -27,7 +27,7 @@
     <p id="texto"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
