--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej10/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej10/ejercicio.html
@@ -34,7 +34,7 @@
         <p id="exec"></p>
     <section id="botones">
             <a href="../index.html"><button id="atras">Atras</button></a>
-            <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+            <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
         </section>
 </body>
 
