--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej2/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej2/ejercicio.html
@@ -34,7 +34,7 @@
         <b>Indican si se utilizan en la expresion regular o no devolviendo true/false</b>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 
 </body>
