--- a/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/ej1/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/ej1/ejercicio.html
@@ -11,7 +11,7 @@
     <h2>Ejercicio 1</h2>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 </html>
