--- a/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/ej4/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/ej4/ejercicio.html
@@ -16,7 +16,7 @@
     <noscript><h1>Se requiere javascript</h1></noscript>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 </html>
