--- a/DAW/Cliente/ObjetosPredefinidos/ControlDNI/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ControlDNI/ejercicio.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="José Mª Romero Ruiz">
     <script src="codigo.js" type="text/javascript"></script>
+    <link href="estilo.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,25 +17,21 @@
         <h1>Se requiere javascript</h1>
     </noscript>
 
-    <h2>Ejercicio 9 - José Mª Romero Ruiz</h2>
+    <h2>Expresiones regulares: Comprobando DNI - José Mª Romero Ruiz</h2>
 
-    <b>Busca en el objeto String funciones que simulen la funcionalidad de test()
-    </b>
-    <p>let expresion = /a/;</p>
+    <p>Introduzca su nombre:
+        <input type="text" id="nombre"> 
+    </p>
+    <p>Introduzca su DNI:
+        <input type="text" id="dni"> <span id="errorDNI"></span>
+    </p>
+    <p>Introduzca su fecha de nacimiento:
+        <input type="text" id="fecha"></span>
+    </p>
 
-    <p>let string = "hola, me gusta el azul";</p>
-
-    <p>string.search(expresion)</p>
-
-    <p><b>Salida: 3</b></p>
-
-    <b>El método search() ejecuta una búsqueda que encaje entre una expresión regular y
-        el objeto String desde el que se llama.</b>
-
-    <p id="test"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
