--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej2/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej2/ejercicio.html
@@ -28,7 +28,7 @@
 
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
