--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej3/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej3/ejercicio.html
@@ -25,7 +25,7 @@
     <p>let numero = 20; (variable numérica)</p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
