--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej8/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/ej8/ejercicio.html
@@ -78,7 +78,7 @@
     <p id="info"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
