--- a/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej10/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej10/ejercicio.html
@@ -25,7 +25,7 @@
     <p id="dias"></p>
     <section id="botones">
             <a href="../index.html"><button id="atras">Atras</button></a>
-            <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+            <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
         </section>
 </body>
 
