--- a/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej2/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej2/ejercicio.html
@@ -26,7 +26,7 @@
     <p id="dateNow"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 
 </body>
