--- a/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej3/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoDate/ej3/ejercicio.html
@@ -28,7 +28,7 @@
     <p id="fecha"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
