--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej1/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej1/ejercicio.html
@@ -35,7 +35,7 @@
     </ul>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
