--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej3/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej3/ejercicio.html
@@ -43,7 +43,7 @@
     <p id="options"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
