--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej5/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej5/ejercicio.html
@@ -37,7 +37,7 @@
     <p id="lastIndex"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 
