--- a/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej7/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoRegex/ej7/ejercicio.html
@@ -31,7 +31,7 @@
     
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </body>
 </html>
