--- a/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/ej2/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoWindowsScreen/ej2/ejercicio.html
@@ -33,7 +33,7 @@ div{
     <p id="scrollbars"></p>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
 </div>
     <script src="codigo.js" type="text/javascript"></script>
