--- a/DAW/Cliente/ObjetosPredefinidos/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/index.html
@@ -30,7 +30,7 @@
             <a href="ListadoArrays/index.html"><li>Listado arrays en Javascript</li></a>
             <a href="ListadoDate/index.html"><li>Listado date</li></a>
             <a href="ListadoRegex/index.html"><li>Listado regex</li></a>
-            <a href=""><li>Expresiones regulares: comprobando DNI</li></a>
+            <a href="ControlDNI/ejercicio.html"><li>Expresiones regulares: comprobando DNI</li></a>
             <a href=""><li>Calculadora</li></a>
             <a href=""><li>Listado Collections</li></a>
         </ul>
