--- a/DAW/Cliente/ObjetosPredefinidos/ListadoCollections/ej1/ejercicio.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoCollections/ej1/ejercicio.html
@@ -9,7 +9,6 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="José Mª Romero Ruiz">
     <script src="codigo.js" type="text/javascript"></script>
-    <link href="estilo.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,11 +16,12 @@
         <h1>Se requiere javascript</h1>
     </noscript>
 
+    <h2>Ejercicio 1 - José Mª Romero Ruiz</h2>
+
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
-    <br>
 </body>
 
 </html>
