--- a/DAW/DIW/index.html
+++ b/DAW/DIW/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="codigo.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -14,11 +15,15 @@
 
 <body>
     <header>
-        <p><a href="../../index.html">José Mª Romero Ruiz</a></p>
+        <p><a href="../../index.html">José Mª Romero Ruiz</a> </p>    
+        <div id="path"></div>   
     </header>
+   
     <section>
         <p><a id="intermedia" href="Practica2/index.html">Primera página web en HTML5</a></p>
         <p><a id="intermedia" href="Practica3/index.html">HTML5 usando plantillas o framework</a></p>
+        <p><a id="intermedia" href="Practica4/index.html">Uso de canvas 1</a></p>
+        <p><a id="intermedia" href="Practica5/index.html">Uso de canvas 2</a></p>
     </section>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
