ruta absoluta retocada

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <p>José Mª Romero Ruiz</p>
+        <div id="path"></div>   
     </header>
     <section>
         <p><a id="intermedia" href="DAW/index.html">Desarrollo de aplicaciones Web</a></p>
