--- a/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/index.html
+++ b/DAW/Cliente/ObjetosPredefinidos/ListadoArrays/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../../../../codigo.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="../../../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -19,6 +20,7 @@
 <body>
     <header>
         <p><a href="../../../../index.html">José Mª Romero Ruiz</a></p>
+        <div id="path"></div>   
     </header>
     <section id="seccionLista">
         <h3>Índice Arrays</h3>
