--- a/DAW/index.html
+++ b/DAW/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../codigo.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -15,6 +16,7 @@
 <body>
     <header>
         <p><a href="../index.html">José Mª Romero Ruiz</a></p>
+        <div id="path"></div>   
     </header>
     <section id="asignaturas">
         <div class="asignatura">
@@ -28,6 +30,13 @@
             <a href="DIW/index.html"><p>Diseño de Interfaces Web</p>
                 <div id="image">
                     <img src="../images/css3yhtml5.png">
+                </div>
+            </a>
+        </div>
+        <div class="asignatura">
+            <a href="DWES/index.php"><p>Desarrollo Web en Entorno Servidor</p>
+                <div id="image">
+                    <img src="../images/php.png">
                 </div>
             </a>
         </div>
