--- a/DAW/DIW/Practica2/index.html
+++ b/DAW/DIW/Practica2/index.html
@@ -36,6 +36,10 @@
     </main>
     <aside style="border: solid blue;">Aquí hay un aside</aside>
     <footer style="border: solid">El footer siempre está al final de la página</footer>
+    <section id="botones">
+        <a href="../index.html"><button id="atras">Atras</button></a>
+        <a href="../../../index.html"><button id="inicio">Inicio</button></a>
+    </section>
 </body>
 
 </html>
