--- a/DAW/DIW/Practica3/index.html
+++ b/DAW/DIW/Practica3/index.html
@@ -68,6 +68,10 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+      <section id="botones">
+        <a href="../index.html"><button id="atras">Atras</button></a>
+        <a href="../../../index.html"><button id="inicio">Inicio</button></a>
+    </section>
 </body>
 
 </html>
