--- a/DAW/DIW/index.html
+++ b/DAW/DIW/index.html
@@ -24,6 +24,7 @@
         <p><a id="intermedia" href="Practica3/index.html">HTML5 usando plantillas o framework</a></p>
         <p><a id="intermedia" href="Practica4/index.html">Uso de canvas 1</a></p>
         <p><a id="intermedia" href="Practica5/index.html">Uso de canvas 2</a></p>
+        <p><a id="intermedia" href="Practica6/index.html">Ejercicio de Html5 y Css3</a></p>
     </section>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
