--- a/DAW/DIW/Practica4/index.html
+++ b/DAW/DIW/Practica4/index.html
@@ -14,6 +14,10 @@
     <div id="cuerpo">
         <canvas id="canvas1"></canvas>        
     </div>
+    <section id="botones">
+        <a href="../index.html"><button id="atras">Atras</button></a>
+        <a href="../../../index.html"><button id="inicio">Inicio</button></a>
+    </section>
 </body>
 
 </html>
