--- a/DAW/DIW/Practica9/index.html
+++ b/DAW/DIW/Practica9/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+        Autor: José María Romero Ruiz
+    -->
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="codigo.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <script src="../../../codigo.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="../../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
-    <title>Index</title>
+    <title>Indice</title>
 </head>
 
 <body>
     <header>
-        <p><a href="../../index.html">José Mª Romero Ruiz</a> </p>    
+        <p><a href="../../../index.html">José Mª Romero Ruiz</a></p>
         <div id="path"></div>   
     </header>
-   
-    <section id="contenedorIntermedio">
-        <p><a id="intermedia" href="Practica2/index.html">Primera página web en HTML5</a></p>
-        <p><a id="intermedia" href="Practica3/index.html">HTML5 usando plantillas o framework</a></p>
-        <p><a id="intermedia" href="Practica4/index.html">Uso de canvas 1</a></p>
-        <p><a id="intermedia" href="Practica5/index.html">Uso de canvas 2</a></p>
-        <p><a id="intermedia" href="Practica6/index.html">Ejercicio de Html5 y Css3</a></p>
-        <p><a id="intermedia" href="Practica8/index.html">Menú multinivel</a></p>
-        <p><a id="intermedia" href="Practica9/index.html">Maquetación con Html 5 y Css3</a></p>
+    <section id="seccionLista" >
+        <h3>Práctica 9</h3>
+        <hr />
+        <ul>
+            <a href="inlineBlock/index.html"><li>Inline / block</li></a>
+            <a href="flex/index.html"><li>Flex</li></a>
+            <a href="grid/index.html"><li>Grid</li></a>
+        </ul>
     </section>
     <section id="botones">
         <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../../index.html"><button id="inicio">Inicio</button></a>
+        <a href="../../../index.html"><button id="inicio">Inicio</button></a>
     </section>
     <footer class="footer">
         <div class="container text-center">
@@ -40,4 +43,5 @@
         </div>
     </footer>
 </body>
+
 </html>
