--- a/DAWRE/DIW/index.html
+++ b/DAWRE/DIW/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="codigo.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
@@ -14,14 +15,23 @@
 
 <body>
     <header>
-        <p>José Mª Romero Ruiz</p>
+        <p><a href="../../index.html">José Mª Romero Ruiz</a> </p>    
         <div id="path"></div>   
     </header>
-    <section>
-        <p><a id="intermedia" href="DAW/index.html">Desarrollo de aplicaciones Web</a></p>
-        <p><a id="intermedia" href="DAWRE/index.html">Desarrollo de aplicaciones Web:RE</a></p>
+   
+    <section id="contenedorIntermedio">
+        <p><a id="intermedia" href="Practica2/index.html">Primera página web en HTML5</a></p>
+        <p><a id="intermedia" href="Practica3/index.html">HTML5 usando plantillas o framework</a></p>
+        <p><a id="intermedia" href="Practica4/index.html">Uso de canvas 1</a></p>
+        <p><a id="intermedia" href="Practica5/index.html">Uso de canvas 2</a></p>
+        <p><a id="intermedia" href="Practica6/index.html">Ejercicio de Html5 y Css3</a></p>
+        <p><a id="intermedia" href="Practica8/index.html">Menú multinivel</a></p>
+        <p><a id="intermedia" href="Practica9/index.html">Maquetación con Html 5 y Css3</a></p>
     </section>
-    
+    <section id="botones">
+        <a href="../index.html"><button id="atras">Atras</button></a>
+        <a href="../../index.html"><button id="inicio">Inicio</button></a>
+    </section>
     <footer class="footer">
         <div class="container text-center">
             <a href="https://twitter.com/Chema_RR"><i class="fa fa-facebook"></i></a>
