--- a/DAWRE/DWES/index.html
+++ b/DAWRE/DWES/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="../codigo.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <script src="../../codigo.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="../../style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
@@ -14,46 +14,23 @@
 </head>
 
 <body>
-    <header>
-        <p><a href="../index.html">José Mª Romero Ruiz</a></p>
-        <div id="path"></div>   
-    </header>
-    <section id="asignaturas">
-        <div class="asignatura">
-            <a href="Cliente/index.html"><p>Desarrollo Web en Entorno Cliente</p>
-                <div id="image">
-                        <img src="../images/javascript.png">
-                </div>
-            </a>
-        </div>
-        <div class="asignatura">
-            <a href="DIW/index.html"><p>Diseño de Interfaces Web</p>
-                <div id="image">
-                    <img src="../images/css3yhtml5.png">
-                </div>
-            </a>
-        </div>
-        <div class="asignatura">
-            <a href="DWES/index.php"><p>Desarrollo Web en Entorno Servidor</p>
-                <div id="image">
-                    <img src="../images/php.png">
-                </div>
-            </a>
-        </div>
-    </section>
-    <section id="botones">
-        <a href="../index.html"><button id="atras">Atras</button></a>
-        <a href="../index.html"><button id="inicio">Inicio</button></a>
-    </section>
-    <footer class="footer">
-        <div class="container text-center">
-            <a href="https://twitter.com/Chema_RR"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.facebook.com/chema.romeroruiz"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/jos%C3%A9-mar%C3%ADa-romero-ruiz-428267142/"><i class="fa fa-linkedin"></i></a>
-        </div>
-    </footer>
+<header>
+    <p><a href="../../index.html">José Mª Romero Ruiz</a></p>
+    <div id="path"></div>
+</header>
+<section>
+    <p><a id="intermedia" href="unidad1/index.html">Unidad 1</a></p>
+</section>
+<section id="botones">
+    <a href="../index.html"><button id="atras">Atras</button></a>
+    <a href="../../index.html"><button id="inicio">Inicio</button></a>
+</section>
+<footer class="footer">
+    <div class="container text-center">
+        <a href="https://twitter.com/Chema_RR"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.facebook.com/chema.romeroruiz"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/jos%C3%A9-mar%C3%ADa-romero-ruiz-428267142/"><i class="fa fa-linkedin"></i></a>
+    </div>
+</footer>
 </body>
-
-
-
 </html>
