tutorial instalacion xampp windows y linux

--- a/DAWRE/DWES/unidad1/index.html
+++ b/DAWRE/DWES/unidad1/index.html
@@ -23,10 +23,11 @@
         <div id="path"></div>   
     </header>
     <section id="seccionLista" >
-        <h3>Objetos predefinidos en Javascript</h3>
+        <h3>Tutorial Xampp</h3>
         <hr />
         <ul>
-            <a href="tutorialXamppWindows/index.php"><li>Apariencia de las ventanas</li></a>
+            <a href="tutorialXamppWindows/index.php"><li>Windows</li></a>
+            <a href="tutorialXamppLinux/index.php"><li>Linux</li></a>
         </ul>
     </section>
     <section id="botones">
