--- a/DAWRE/index.html
+++ b/DAWRE/index.html
@@ -34,7 +34,7 @@
             </a>
         </div>
         <div class="asignatura">
-            <a href="DWES/index.php"><p>Desarrollo Web en Entorno Servidor</p>
+            <a href="DWES/index.html"><p>Desarrollo Web en Entorno Servidor</p>
                 <div id="image">
                     <img src="../images/php.png">
                 </div>
